enum-derived/tests/rand/05-fail-for-struct.stderr
error: proc-macro derive panicked
 --> tests/rand/05-fail-for-struct.rs:3:10
  |
3 | #[derive(Rand)]
  |          ^^^^
  |
  = help: message: Only enums are supported
